# sapi

./: README.md  sapi.cabal
benchmarks/: Bench.hs
executables/: Main.hs
native/: calling_convention.h  recognition.c  recognition.h
sources/: SAPI.hs
sources/SAPI/: Bindings.hs  Extra.hs  Main.hs  Types.hs
tests/: DocTest.hs
tests/SAPI/: Test.hs
