name:                sapi
version:             0.0.0
synopsis:            TODO
description:         TODO
homepage:            http://github.com/sboosali/sapi#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2016 Spiros Boosalis
category:            TODO
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  .gitignore
  .travis.yml
  HLint.hs
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/sboosali/sapi


library
 hs-source-dirs:      sources
 default-language:    Haskell2010
 ghc-options:         -Wall -fno-warn-unticked-promoted-constructors
 default-extensions: AutoDeriveTypeable DeriveDataTypeable DeriveGeneric
                     DeriveFunctor DeriveFoldable DeriveTraversable
                     LambdaCase EmptyCase TypeOperators PostfixOperators
                     ViewPatterns BangPatterns KindSignatures
                     NamedFieldPuns RecordWildCards TupleSections
                     MultiWayIf DoAndIfThenElse EmptyDataDecls Arrows
                     MultiParamTypeClasses FlexibleContexts FlexibleInstances
                     TypeFamilies FunctionalDependencies
                     ScopedTypeVariables StandaloneDeriving

 include-dirs:     native
 c-sources:        native/recognition.c
 includes:         native/recognition.h
 install-includes: native/recognition.h

 exposed-modules:
  SAPI
  SAPI.Types
  SAPI.Main
  SAPI.Bindings

 other-modules:
  SAPI.Extra

 build-depends:
    base >=4.7 && <5

  -- ,
  -- , transformers
  -- , mtl
  -- , containers
  -- , bytestring
  -- , stm
  -- , template-haskell

  , deepseq
  , semigroups
  -- ,
  -- , lens
  -- , exceptions
  -- , free
  -- , bifunctors
  -- , profunctors
  -- , either
  -- , pipes
  -- , formatting
  -- , servant
  -- , Earley
  -- , split
  -- , interpolatedstring-perl6
  -- , wl-pprint-text
  -- , text
  -- , aeson
  -- , hashable
  -- , unordered-containers
  -- , async
  -- , parallel


-- $ stack exec sapi-example
executable sapi-example
 hs-source-dirs:      executables
 main-is:             Main.hs

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , sapi


-- $ stack test doctest
test-suite doctest
 hs-source-dirs:      tests
 main-is:             DocTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , sapi
  , doctest


-- $ stack test unittest
test-suite unittest
 hs-source-dirs:      tests
 main-is:             UnitTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 other-modules:
  SAPI.Test

 build-depends:
    base
  , sapi
  , hspec ==2.2.*
  , QuickCheck ==2.8.*
  -- , tasty
  -- , tasty-quickcheck


-- $ stack bench
benchmark command
 hs-source-dirs:      benchmarks
 main-is:             Bench.hs
 type:                exitcode-stdio-1.0

 default-language: Haskell2010
 ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , sapi
  , criterion
  , deepseq
